--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    >
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    >
-    <link rel="stylesheet" href="./css/styles.css" >
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="headder section">
-      <div class="header-container">
+    <header class="header">
+      <div class="container">
         <nav class="header-nav">
           <a lang="en" class="link logo" href="./index.html"
             >Web<span class="logo-second-part">Studio</span></a
@@ -56,10 +56,10 @@
     </header>
     <main>
       <!-- Секція герой -->
-      <section class="hero-bgc section">
-        <div class="hero-container">
+      <section class="hero-bgc">
+        <div class="container">
           <h1 class="hero-title">
-            Ефективні рішення для <br >
+            Ефективні рішення для <br />
             вашого бізнесу
           </h1>
           <button class="btn-studia" type="button">Замовити послугу</button>
@@ -104,46 +104,45 @@
 
       <!-- чим займається компанія -->
       <section class="section">
-        <div class="activity-container">
-          <h2 class="section-title">Чим ми займаємося</h2>
-          <ul class="list list-img">
-            <li>
-              <img
-                src="./images/box1.jpg"
-                alt="людина друкує на клавіатурі"
-                width="370"
-              >
-            </li>
-            <li>
-              <img
-                src="./images/box2.jpg"
-                alt="людина тримає у руці телефон"
-                width="370"
-              >
-            </li>
-            <li>
-              <img
-                src="./images/box3.jpg"
-                alt="людина користується планшетом"
-                width="370"
-              >
-            </li>
-          </ul>
-        </div>
+        <div class="container">
+            <h2 class="section-title">Чим ми займаємося</h2>
+            <ul class="list list-flex">
+              <li>
+                <img
+                  src="./images/box1.jpg"
+                  alt="людина друкує на клавіатурі"
+                  width="370"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/box2.jpg"
+                  alt="людина тримає у руці телефон"
+                  width="370"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/box3.jpg"
+                  alt="людина користується планшетом"
+                  width="370"
+                />
+              </li>
+            </ul>
+          </div>
       </section>
 
       <!-- команда -->
       <section class="team-bgc section">
         <div class="container">
-          <div class="team-container">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="list team-list">
+            <ul class="list team-flex">
               <li class="team-item team-list-item">
                 <img
                   src="./images/img.jpg"
                   alt="фото Ігоря Дем'яненка"
                   width="270"
-                >
+                />
 
                 <div class="team-title-text">
                   <h3 class="team-titles">Ігор Дем'яненко</h3>
@@ -155,7 +154,7 @@
                   src="./images/img1.jpg"
                   alt="фото Ольги Рєпіної"
                   width="270"
-                >
+                />
                 <div class="team-title-text">
                   <h3 class="team-titles">Ольга Рєпіна</h3>
                   <p lang="en" class="team-text">Frontend Developer</p>
@@ -166,7 +165,7 @@
                   src="./images/img2.jpg"
                   alt="фото Миколи Тарасова"
                   width="270"
-                >
+                />
                 <div class="team-title-text">
                   <h3 class="team-titles">Микола Тарасов</h3>
                   <p lang="en" class="team-text">Marketing</p>
@@ -177,47 +176,50 @@
                   src="./images/img3.jpg"
                   alt="фото Михайла Єрмакова"
                   width="270"
-                >
+                />
                 <div class="team-title-text">
                   <h3 class="team-titles">Михайло Єрмаков</h3>
                   <p lang="en" class="team-text">UI Designer</p>
                 </div>
               </li>
             </ul>
-          </div>
         </div>
       </section>
     </main>
-    <footer class="footer-bgc section">
-      <div class="footer-container">
-        <a lang="en" class="link logo logo-footer" href="./index.html"
-          >Web<span class="footer-logo-second-part">Studio</span></a
-        >
-        <address class="footer-address">
-          <ul class="list list-footer">
-            <li>
-              <a
-                class="link footer-link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Украінки, 26</a
-              >
-            </li>
-            <li>
-              <a
-                class="link footer-link opacity-link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="link footer-link opacity-link" href="tel:++380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+    <footer class="footer-bgc">
+      <div class="container">
+        <div class="footer-container">
+          <a lang="en" class="link logo logo-footer" href="./index.html"
+            >Web<span class="footer-logo-second-part">Studio</span></a
+          >
+          <address class="footer-address">
+            <ul class="list list-footer">
+              <li>
+                <a
+                  class="link footer-link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Украінки, 26</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link footer-link opacity-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link footer-link opacity-link"
+                  href="tel:++380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
