Finishing home work 2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </section>
 
       <!-- Перлік переваг -->
-      <section class="section">
+      <section class="section benefits">
         <div class="container">
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="list list-benefits">
