--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
-    <header class="headder section">
-      <div class="header-container">
+    <header class="header">
+      <div class="container">
         <nav class="header-nav">
           <a lang="en" class="link logo" href="./index.html"
             >Web<span class="logo-second-part">Studio</span></a
@@ -59,7 +59,6 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Project filter</h1>
-          <div class="btn-wrap">
             <ul class="list list-btn">
               <li class="btn">
                 <button class="btn-portfolio" type="button">Усі</button>
@@ -77,7 +76,6 @@
                 <button class="btn-portfolio" type="button">Маркетинг</button>
               </li>
             </ul>
-          </div>
           <ul class="list list-item">
             <li class="item">
               <img
@@ -184,36 +182,40 @@
         </div>
       </section>
     </main>
-    <footer class="footer-bgc section">
-      <div class="footer-container">
-        <a lang="en" class="link logo logo-footer" href="./index.html"
-          >Web<span class="footer-logo-second-part">Studio</span></a
-        >
-        <address class="footer-address">
-          <ul class="list list-footer">
-            <li>
-              <a
-                class="link footer-link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Украінки, 26</a
-              >
-            </li>
-            <li>
-              <a
-                class="link footer-link opacity-link"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="link footer-link opacity-link" href="tel:++380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+    <footer class="footer-bgc">
+      <div class="container">
+        <div class="footer-container">
+          <a lang="en" class="link logo logo-footer" href="./index.html"
+            >Web<span class="footer-logo-second-part">Studio</span></a
+          >
+          <address class="footer-address">
+            <ul class="list list-footer">
+              <li>
+                <a
+                  class="link footer-link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Украінки, 26</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link footer-link opacity-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link footer-link opacity-link"
+                  href="tel:++380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
